--- a/style.css
+++ b/style.css
@@ -2,16 +2,22 @@ body{
     background-color: #e5e5e5;
 }
 
-.nav-extended {
-  
-    background: url("imagens/capa1.png");
+.nav-extended{
+    background-image: url("imagens/capa.jpg");
+    background-size: cover;
+    background-blend-mode: soft-light;
 }
 
 nav ul li.active, .tab a.active{
-    border-bottom: solid 2px #ffffff;
+    border-bottom: solid 2px #FFF;
     background-color: transparent;
 }
 
 .nav-header h1{
     text-shadow: 2px 2px 15px #000000;
+}
+
+.fadeOut{
+    opacity: 0;
+    transition: 1s;
 }
